# diamondDetector

./: 70cmDDPos.mac  CMakeLists.txt  README  angBeam.mac  angBeamExt.mac  angular_beam_changes.mac  beam.mac  construction.cc  construction.hh  detector.cc  generate_2D_histogram_from_branch.C  generator.cc  generator.hh  physics.cc  posDDvarAng.mac  readme.txt  run.cc  run.hh  sim.cc  test.mac
include/: Action.hh  DetectorConstruction.hh  action.hh  construction.hh  detector.hh  event.hh  generator.hh  physics.hh
macros/: 40cmDDPos.mac  DDPos0.1cm.mac  angBeam.mac  beam.mac  posDDvarAng.mac  varAng.mac  varAngExt.mac  varEnergy.mac  varEnergyExt.mac  varRad.mac  varRadExt.mac
results/: DDresults.root  README  SD+ID+DDresults.root  generate_histogram_from_branch.C
results/DDPosition/: DD-10cm_ID25cm_beam-45cm_DD.root  DD-10cm_ID25cm_beam-45cm_ID+DD.root  DD-10cm_ID25cm_beam-45cm_ID.root  DD-10cm_ID25cm_beam-45cm_SD+ID+DD.root  DD-10cm_ID25cm_beam-45cm_SD.root  DD9cm_ID25cm_beam-45cm_DD.root  DD9cm_ID25cm_beam-45cm_ID+DD.root  DD9cm_ID25cm_beam-45cm_ID.root  DD9cm_ID25cm_beam-45cm_SD+ID+DD.root  DD9cm_ID25cm_beam-45cm_SD.root  README  generate_2D_histogram_from_branch.C
results/DDPosition2DegBeam/: ID_DD_detector_on_DD_-10cm0.root  ID_DD_detector_on_DD_-20cm0.root  ID_DD_detector_on_DD_-30cm0.root  ID_DD_detector_on_DD_0cm0.root  ID_DD_detector_on_DD_9cm0.root  generate_2D_histogram_from_branch.C
src/: Action.cc  DetectorConstruction.cc  Generator.cc  PhysicsList.cc  action.cc  construction.cc  detector.cc  event.cc  generator.cc  physics.cc  run.cc
(+63 files in other folders)
